Added port & version
Changed image version to specific number not latest and added port 9000 as option to access the UI via just http

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,12 @@ version: '3'
 services:
   
   portainer:
-    image: portainer/portainer-ce:latest
+    image: portainer/portainer-ce:2.11.1
     container_name: portainer
     restart: on-failure
     ports:
       - 9443:9443
+      - 9000:9000
       - 8000:8000
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
